# hymud

./: config.cfg  config.ini  options.h  readme.txt
adm/: fubendoor.c
clone/: tongren.c  xiangjiaopi.c
data/: .gitignore
feature/: action.c  alias.c  aliasbak  aliasbak.c  aliasnew.c  aliasold.c  anamichi.c  attack.30  attack.c  banker.c  clean_up.c  command.c  commandhell.c  commandhy2.c  condition.c.bak  damage.c  dbase.c  dbase.old.c  dealer.c  edit.c.bak  encoding.c  encoding.c.bak  equip.c  food1.c  gems.c  gems.h  message.c  message.c.bak  message1.c  more.c  move.c  move.c.bak  movebak.c  movehy2.c  name.c  skill.c  team.c  treemap.c
include/: ansi.h  ansi.h.bak  command.h  globals.000  globals.bak  globals.h  login.000  login.h  mudlib.h  origin.h  weapon.h
inherit/: sserver.c  trap.c
log/: .gitignore  AUTOLOAD  CREATESKILL  FTPD  KILL_LOG  LIBRARY  MONEY_RESET  NEWS  SNOOP_PLAYER  backup  condition.err  destruct  dns_master  ishy  jiangli  kickout  liwu  move.bug  paimai_log  qiujin  setskill  shexin_player  taskjob
maxim/: skill_model_default.c  skill_model_unarmed.c  skill_model_weapon.c
p/: guangchang.c  guangchang1.c  guangchang12.c  guangchang13.c  guangchang2.c  guangchang3.c
p/residence/banding/: air  airhorse  ajax  aka  alucard  ant  apollo  athena  avatar  ayym  baggio  bbe  bbm  bbs  bbu  bbv  bbz  bear  beauty  beg  bhs  bigpig  bite  black  bmr  boat  bob  box  bsx  btl  btm  btxm  budaoding  bwd  cady  can  cbug  cccc  cctv  celsius  (+299 more)
quest/: boss.c  dynamic_location  dynamic_quest  giveaskgift.c  givegift.c  givehdgift.c  helian.c  (+53 more)
(+31150 files in other folders)
