1 /p/item/newbie
2 /p/item/newbiesword
3 /p/item/ritemw/Wstaff130
4 /p/item/ritemw/Waxe175
5 /p/item/ritemw/Wsword282
6 /p/item/ritema/Aboots125
7 /p/item/ritema/Ahands104
9 /p/item/ritema/Ashield162
10 /p/item/ritemtz3/Acloth28
11 /p/item/ritema/Aneck237
12 /p/item/ritema/Awrists140
13 /p/item/ritema/Awaist119
14 /p/item/ritema/Ahead318
18 /p/item/ritema/Acloth168
